--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name h42n42)
  (name main)
- (libraries h42n42))
+ (libraries h42n42 ocsigenserver ocsigenserver.ext.staticmod))
