chore: pin eliom dependency before 11.0.0

--- a/h42n42.opam
+++ b/h42n42.opam
@@ -19,7 +19,7 @@ depends: [
   "ounit2" {with-test}
   "bisect_ppx"
   "ocsipersist-sqlite"
-  "eliom"
+  "eliom" {< "11.0.0"}
   "ocsigenserver"
   "ocsigen-ppx-rpc"
 ]
