--- a/h42n42.opam
+++ b/h42n42.opam
@@ -4,6 +4,9 @@ version: "0.1"
 synopsis: "Pseudo package for defining project dependencies"
 
 depends: [
+  "dune" {>= "3.0.0" & < "4.0.0"}
   "eliom" {>= "10.0.0" & < "11.0.0"}
   "ocsipersist-dbm" {>= "1.0" & < "2.0"}
+  "ocsipersist-sqlite" {>= "1.0.0" & < "2.0.0"}
+  "ocsigen-ppx-rpc" {>= "1.0" & < "2.0"}
 ]
